--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Редиректирање кон Index.php --> 
+<!-- Оти не го решифме проблемот со nginx-от -->
 <html>
 <meta http-equiv="refresh" content="1; URL=https://radio.kanal77.mk/index.php" />
 </html>
